--- a/real.css
+++ b/real.css
@@ -8,10 +8,15 @@ html {
 
 .nav {
   width: 100vw;
+  height: 6rem;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  position: fixed;
+  background-color: #ffffff;
+  z-index: 10;
+  
 }
 
 .logo {
@@ -91,7 +96,7 @@ a:hover::after {
   flex-direction: column;
   flex-wrap: wrap;
 width: 50%;
-margin-top: 5rem;
+margin-top: 9rem;
 }
 
 .titulo-1 {
@@ -107,7 +112,7 @@ margin-top: 5rem;
 .input-1 {
   width: 20rem;
   border: none;
-  margin: 2rem 6.5rem;
+  margin: 2rem 7rem;
   opacity: 0.5;
   
   
@@ -120,8 +125,10 @@ margin-top: 5rem;
 .search{ 
   position: relative;
   top: -3em;
-  left: 4.5rem;
+  left: 5.5rem;
   opacity: 0.5;
+  width: 1rem;
+  
 }
 .search:hover{
   cursor: pointer;
@@ -130,7 +137,7 @@ margin-top: 5rem;
 
 .img-1{
   width: 75%;
-  margin-top: 4rem;
+  margin-top: 9rem;
 }
 .btn-search {
   width: 8rem;
@@ -262,4 +269,78 @@ margin-top: 5rem;
 .street-1:hover{
   cursor: pointer;
   color: black;
+}
+
+.more{
+  display: flex;
+  flex-wrap: wrap;
+  
+}
+
+.more-1{
+  color: #a7a3a3;
+  margin-left: 4rem;
+  margin-top: 4rem;
+}
+.more-2{
+  margin-left: 4.5rem;
+  margin-top: 3rem;
+  width: 8.5rem;
+  height: 3rem;
+  border-radius: 25px;
+  border: 1px solid black;
+  background-color: #ffffff;
+  font-size: 1rem;
+}
+
+.vision{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-top: 6.5rem;
+  justify-content: center;
+  background-color: #fafafa;
+  width: 100vw;
+ 
+}
+
+.vision2{
+  width: 40%;
+  padding-left: 3rem;
+  
+}
+.vision-tit{
+  margin-left: 6rem;
+  font-size: 3.5rem;
+  font-weight: 450;
+}
+.vision-p{
+  width: 35rem;
+  line-height: 2rem;
+  color: #a7a3a3;
+  margin-top: 2rem;
+  margin-left: 1rem;
+}
+.vision-img{
+  width: 35rem;
+  margin-right: 2.5rem;
+  margin-top: 1.5rem;
+}
+.mision{
+ padding: 1rem;
+  width: 40%;
+}
+.mision-img{
+  width: 35rem;
+}
+.mision-tit{
+  font-size: 3.5rem;
+  margin-top: 1.5rem;
+  font-weight: 450;
+}
+.mision-p{
+  width: 30rem;
+  line-height: 2rem;
+  color: #a7a3a3;
+  margin-top: 1.5rem;
 }
