--- a/real.css
+++ b/real.css
@@ -21,13 +21,13 @@ html {
 
 .logo {
   position: relative;
-  left: -18rem;
+  left: -16rem;
   bottom: -2rem;
   height: 3rem;
 }
 .logo-1 {
   position: relative;
-  left: -18rem;
+  left: -16rem;
   bottom: -3rem;
   font-weight: 600;
 }
@@ -57,7 +57,6 @@ a:hover::after {
   margin-top: 3rem;
   cursor: pointer;
 }
-
 .btn-get {
   position: relative;
   right: -10rem;
@@ -90,6 +89,7 @@ a:hover::after {
 .giro{
   display: flex;
   flex-wrap: wrap;
+  
 }
 .caja-1{
   display: flex;
@@ -115,14 +115,11 @@ padding-left: 2rem;
   border: none;
   margin: 2rem 7rem;
   opacity: 0.5;
-  
-  
 }
 .input-1:hover{
   opacity: 1;
   cursor: pointer;
-  }
-
+}
 .search{ 
   position: relative;
   top: -3em;
@@ -174,8 +171,6 @@ padding-left: 2rem;
   justify-content: space-evenly;
   width: 85%;
 }
-
-
 .titulo-2 {
   font-size: 2.5rem;
 }
@@ -185,11 +180,8 @@ padding-left: 2rem;
   font-weight: 400;
 }
 .contenedor{
-  padding-left: 2rem;
+  padding-left: 4.5rem;
 }
-  
-
-
 .indo {
   display: flex;
   flex-wrap: wrap;
@@ -200,7 +192,6 @@ padding-left: 2rem;
   margin-left: 4.5rem;
   font-size: 3rem;
 }
-
 .indo_p{
   color: #a7a3a3;
   width: 28rem;
@@ -214,6 +205,10 @@ padding-left: 2rem;
   padding-left: 3rem;
   
 }
+.casitas-img:hover {
+  cursor: pointer;
+  opacity: 0.5;
+}
 .geo {
   padding-left: 1rem;
   color: #a7a3a3;
@@ -222,19 +217,14 @@ padding-left: 2rem;
 .geo:hover{
   cursor: pointer;
   opacity: 0.5;
-
 }
 .ataz{
   padding-left: 1rem;
 }
-
-
 .more{
   display: flex;
   flex-wrap: wrap;
-  
 }
-
 .more-1{
   color: #a7a3a3;
   margin-left: 4rem;
@@ -276,13 +266,12 @@ padding-left: 2rem;
   justify-content: center;
   background-color: #fafafa;
   width: 100vw;
- 
+  padding-left: 2.5rem;
+  padding-right: 2.5;
 }
-
 .vision2{
   width: 40%;
   padding-left: 3rem;
-  
 }
 .vision-tit{
   margin-left: 6rem;
@@ -318,7 +307,6 @@ padding-left: 2rem;
   line-height: 2rem;
   color: #a7a3a3;
   margin-top: 1rem;
-
 }
 .step {
   display: flex;
@@ -326,6 +314,7 @@ padding-left: 2rem;
   justify-content: space-evenly;
   margin-top: 9rem;
   margin-right:  1rem;
+  padding-left: 10rem;
 }
 .step-t{
   font-size: 2.8rem;
@@ -336,23 +325,20 @@ padding-left: 2rem;
   line-height: 2rem;
   color: #a7a3a3;
 }
-
 .view {
   display: flex;
   flex-direction:row ;
   flex-wrap: wrap;
   justify-content: space-evenly;
- margin-right: 1rem;
+ 
   margin-top: 8rem;
-  padding: 0 7rem;
+  padding-left:10rem ;
+  padding-right: 5rem;
 }
 .uno.dos.tres.cuatro {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  
- 
-  
 }
 .view-p{
   width: 16rem;
@@ -373,9 +359,81 @@ padding-left: 2rem;
   background-color: black;
   color: white;
   font-weight: 400;
-  
 }
 .view-name {
   font-size: 1.8rem;
   font-weight: 600;
+}
+.more{
+  padding-left: 7.5rem;
+}
+.more-3{
+  padding-left: 2.5rem;
+}
+.needs{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 8rem;
+}
+.needs-2{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.needs-p{
+  width: 30rem;
+  line-height: 2rem;
+  color: #a7a3a3;
+  margin-bottom: 1rem;
+}
+
+.needs-img2{
+  width: 90%;
+  border-radius: 5%;
+  padding-left: 2.5rem;
+}
+.needs-t1{
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+ 
+  
+}
+.needs-t2{
+  font-size: 1.8rem;
+  margin-bottom: 0.5rem;
+}
+.check{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 1.5rem;
+  
+}
+.tilde{
+  font-size: 2.5em;
+  margin-right: 2rem;
+  
+}
+.customers{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding-left:  13.3rem;
+  margin-top: 8rem;
+}
+.customers-t{
+  line-height: 3rem;
+  font-size: 2.5rem;
+  margin-right: 2rem;
+}
+
+
+.customers-p{
+  width: 33rem;
+  margin-left: 2rem;
+  line-height: 2rem;
+  margin-top: 1rem;
+  color: #a7a3a3;
 }
