--- a/real.css
+++ b/real.css
@@ -642,7 +642,7 @@ footer{
   width: 12rem;
   height: 2.5rem;
   border-radius: 25px;
- border-color: #ece6e6;
+  border: 1px solid #a7a3a3;
   margin-bottom: .5rem;
 }
 .in5:hover{
